assets/css/site/header.css
.site-header {
    padding: 0 min(4rem, 4vw);
}

.with-full-cover .site-header {
    position: relative;
    z-index: 90;
}

.header-inner {
    display: grid;
    height: var(--navbar-height);
    grid-template-columns: 1fr auto 1fr;
    grid-auto-flow: row dense;
    column-gap: 4rem;
}

/* Brand
/* ---------------------------------------------------------- */

.header-brand {
    display: flex;
    align-items: center;
    white-space: nowrap;
}

.logo {
    position: relative;
}

.logo-text {
    color: var(--secondary-text-color);
    font-size: 1.8rem;
    font-weight: 800;
}

.with-full-cover:not(.menu-opened) .logo-text {
    color: #fff;
}

.logo-image {
    max-height: 50px;
}

.logo-image.white {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
}

/* Nav
/* ---------------------------------------------------------- */

.header-nav {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.site-header .menu-item {
    font-weight: 700;
}

.site-header .menu-item + .menu-item {
    margin-left: 3rem;
}

.with-full-cover:not(.menu-opened) .header-nav .menu-item,
.with-full-cover:not(.menu-opened) .header-actions .menu-item {
    color: #fff;
}

/* Dropdown
/* ---------------------------------------------------------- */

.menu-item-more {
    position: relative;
    margin-left: 2rem;
}

.with-full-cover:not(.menu-opened) .menu-item-more {
    color: #fff;
}

.menu-item-more .icon {
    width: 24px;
    height: 24px;
}

.sub-menu {
    position: absolute;
    top: 100%;
    right: -13px;
    z-index: 90;
    display: none;
    margin-top: 2rem;
    padding: 1rem 0;
    width: 170px;
    text-align: left;
    background-color: var(--darker-gray-color);
    border-radius: 5px;
}

.sub-menu::before {
    content: "";
    position: absolute;
    top: -6px;
    right: 21px;
    width: 0;
    height: 0;
    border-right: 7px solid transparent;
    border-bottom: 7px solid var(--darker-gray-color);
    border-left: 7px solid transparent;
}

.sub-menu .menu-item {
    display: block;
    padding: 0.7rem 1.5rem;
    color: var(--white-color);
    font-size: 1.3rem;
}

.sub-menu .menu-item + .menu-item {
    margin-left: 0;
}

/* Actions
/* ---------------------------------------------------------- */

.header-actions {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    white-space: nowrap;
}

.header-actions .menu-item + .menu-item {
    margin-left: 2rem;
}

.menu-item-cta {
    color: var(--brand-color);
}

/* Variants
/* ---------------------------------------------------------- */

.site-header.navbrandactions .header-brand {
    grid-column-start: 2;
}

.site-header.navbrandactions .header-nav {
    grid-column-start: 1;
}

.site-header.brandnav .header-inner {
    grid-template-columns: auto max-content max-content;
    column-gap: 0;
}

.site-header.brandnav .header-actions {
    margin-left: 3rem;
}

.site-header.brandnav .header-actions .menu-item + .menu-item {
    margin-left: inherit;
}

.site-header.brandnavactions .header-inner {
    grid-template-columns: max-content max-content auto;
}

/* Mobile menu
/* ---------------------------------------------------------- */

@media (max-width: 991px) {
    #site-header .header-inner {
        height: 100%;
        grid-template-columns: 1fr;
    }

    #site-header .header-brand {
        justify-content: space-between;
        height: var(--navbar-height);
        grid-column-start: auto;
    }

    #site-header .header-nav,
    #site-header .header-actions {
        display: none;
    }

    #site-header .header-nav {
        flex-direction: column;
        justify-content: center;
        margin-bottom: 10vh;
    }

    #site-header .menu-item {
        margin: 0.6rem 0;
        font-size: 2.5rem;
    }

    #site-header .header-actions {
        flex-direction: column;
        margin-bottom: 4vh;
    }

    .menu-opened #site-header {
        position: fixed;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background-color: var(--white-color);
    }

    .menu-opened #site-header .header-inner {
        grid-template-rows: auto 1fr auto;
    }

    .menu-opened #site-header .header-nav,
    .menu-opened #site-header .header-actions {
        display: flex;
    }
}

